proofread and correct up to and including almost all of Joshua

--- a/final product/OEBPS/DEU.xhtml
+++ b/final product/OEBPS/DEU.xhtml
@@ -1358,7 +1358,7 @@
 <aside epub:type='footnote' id="FN64"><p class="f"><a class="notebackref" href="#DT5_6"><span class="notemark">†</span> 5.6</a>
  <span class="ft">Heb. servants.</span></p></aside>
 <aside epub:type='footnote' id="FN65"><p class="f"><a class="notebackref" href="#DT5_9"><span class="notemark">*</span> 5.9</a>
- <span class="ft">Ex. <a href='EXO.xhtml#EX84_7'>84. 7</a>.</span></p></aside>
+ <span class="ft">Ex. <a href='EXO.xhtml#EX34_7'>34. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN66"><p class="f"><a class="notebackref" href="#DT5_10"><span class="notemark">*</span> 5.10</a>
  <span class="ft">Jer. <a href='JER.xhtml#JR32_18'>32. 18</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN67"><p class="f"><a class="notebackref" href="#DT5_14"><span class="notemark">*</span> 5.14</a>
@@ -1484,7 +1484,7 @@
 <aside epub:type='footnote' id="FN127"><p class="f"><a class="notebackref" href="#DT10_17"><span class="notemark">*</span> 10.17</a>
  <span class="ft">2 Chr. <a href='2CH.xhtml#R219_7'>19. 7</a>. Job <a href='JOB.xhtml#JB34_19'>34. 19</a>. Acts <a href='ACT.xhtml#AC10_34'>10. 34</a>. Rom. <a href='ROM.xhtml#RM2_11'>2. 11</a>. Gal. <a href='GAL.xhtml#GL2_6'>2 6</a>. Eph. <a href='EPH.xhtml#EP6_9'>6. 9</a>. Col <a href='COL.xhtml#CL3_25'>3. 25</a>. 1 Pet. <a href='1PE.xhtml#P11_17'>1. 17</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN128"><p class="f"><a class="notebackref" href="#DT10_20"><span class="notemark">*</span> 10.20</a>
- <span class="ft">ch. <a href='DEU.xhtml#DT6_13'>6. 13</a>. Matt. <a href='MAT.xhtml#MT4_10'>4. 10</a>. Luke <a href='LUK.xhtml#LK4_3'>4. 3</a>.</span></p></aside>
+ <span class="ft">ch. <a href='DEU.xhtml#DT6_13'>6. 13</a>. Matt. <a href='MAT.xhtml#MT4_10'>4. 10</a>. Luke <a href='LUK.xhtml#LK4_8'>4. 8</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN129"><p class="f"><a class="notebackref" href="#DT10_20"><span class="notemark">*</span> 10.20</a>
  <span class="ft">ch. <a href='DEU.xhtml#DT13_4'>13. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN130"><p class="f"><a class="notebackref" href="#DT10_22"><span class="notemark">*</span> 10.22</a>
@@ -1508,7 +1508,7 @@
 <aside epub:type='footnote' id="FN139"><p class="f"><a class="notebackref" href="#DT11_24"><span class="notemark">*</span> 11.24</a>
  <span class="ft">Josh. <a href='JOS.xhtml#JS1_3'>1. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN140"><p class="f"><a class="notebackref" href="#DT11_27"><span class="notemark">*</span> 11.27</a>
- <span class="ft">ch. <a href='DEU.xhtml#DT23_2'>23. 2</a>.</span></p></aside>
+ <span class="ft">ch. <a href='DEU.xhtml#DT28_2'>28. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN141"><p class="f"><a class="notebackref" href="#DT11_28"><span class="notemark">*</span> 11.28</a>
  <span class="ft">ch. <a href='DEU.xhtml#DT28_15'>28. 15</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN142"><p class="f"><a class="notebackref" href="#DT11_29"><span class="notemark">*</span> 11.29</a>
@@ -1550,7 +1550,7 @@
 <aside epub:type='footnote' id="FN160"><p class="f"><a class="notebackref" href="#DT13_4"><span class="notemark">*</span> 13.4</a>
  <span class="ft">ch. <a href='DEU.xhtml#DT10_20'>10. 20</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN161"><p class="f"><a class="notebackref" href="#DT13_5"><span class="notemark">†</span> 13.5</a>
- <span class="ft">Heb. <span class="add">spoken recolt against the <span class="nd">Lord.</span></span></span></p></aside>
+ <span class="ft">Heb. <span class="add">spoken revolt against the <span class="nd">Lord.</span></span></span></p></aside>
 <aside epub:type='footnote' id="FN162"><p class="f"><a class="notebackref" href="#DT13_9"><span class="notemark">*</span> 13.9</a>
  <span class="ft">ch. <a href='DEU.xhtml#DT17_7'>17. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN163"><p class="f"><a class="notebackref" href="#DT13_10"><span class="notemark">†</span> 13.10</a>
@@ -1606,7 +1606,7 @@
 <aside epub:type='footnote' id="FN188"><p class="f"><a class="notebackref" href="#DT15_21"><span class="notemark">*</span> 15.21</a>
  <span class="ft">Lev. <a href='LEV.xhtml#LV22_20'>22. 20</a>. ch. <a href='DEU.xhtml#DT17_1'>17. 1</a>. Ecclus. <a href='SIR.xhtml#SR35_12'>35. 12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN189"><p class="f"><a class="notebackref" href="#DT15_23"><span class="notemark">*</span> 15.23</a>
- <span class="ft">ch. 13. <a href='DEU.xhtml#DT13_16'>16</a>, <a href='DEU.xhtml#DT13_23'>23</a>.</span></p></aside>
+ <span class="ft">ch. 12. <a href='DEU.xhtml#DT12_16'>16</a>, <a href='DEU.xhtml#DT12_23'>23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN190"><p class="f"><a class="notebackref" href="#DT16_1"><span class="notemark">*</span> 16.1</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX12_2'>12. 2</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN191"><p class="f"><a class="notebackref" href="#DT16_1"><span class="notemark">*</span> 16.1</a>
@@ -1728,7 +1728,7 @@
 <aside epub:type='footnote' id="FN249"><p class="f"><a class="notebackref" href="#DT20_14"><span class="notemark">†</span> 20.14</a>
  <span class="ft">Heb. spoil.</span></p></aside>
 <aside epub:type='footnote' id="FN250"><p class="f"><a class="notebackref" href="#DT20_19"><span class="notemark">∥</span> 20.19</a>
- <span class="ft">Or, for, O man, the tree of the fickt is to be employed in the siege.</span></p></aside>
+ <span class="ft">Or, for, O man, the tree of the field is to be employed in the siege.</span></p></aside>
 <aside epub:type='footnote' id="FN251"><p class="f"><a class="notebackref" href="#DT20_19"><span class="notemark">†</span> 20.19</a>
  <span class="ft">Heb. to go from before thee.</span></p></aside>
 <aside epub:type='footnote' id="FN252"><p class="f"><a class="notebackref" href="#DT20_20"><span class="notemark">†</span> 20.20</a>
@@ -1744,7 +1744,7 @@
 <aside epub:type='footnote' id="FN257"><p class="f"><a class="notebackref" href="#DT21_17"><span class="notemark">†</span> 21.17</a>
  <span class="ft">Heb. that is found with him.</span></p></aside>
 <aside epub:type='footnote' id="FN258"><p class="f"><a class="notebackref" href="#DT21_23"><span class="notemark">*</span> 21.23</a>
- <span class="ft">Gal. <a href='GAL.xhtml#GL3_18'>3. 18</a>.</span></p></aside>
+ <span class="ft">Gal. <a href='GAL.xhtml#GL3_13'>3. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN259"><p class="f"><a class="notebackref" href="#DT21_23"><span class="notemark">†</span> 21.23</a>
  <span class="ft">Heb. the curse of God.</span></p></aside>
 <aside epub:type='footnote' id="FN260"><p class="f"><a class="notebackref" href="#DT22_1"><span class="notemark">*</span> 22.1</a>
@@ -1772,7 +1772,7 @@
 <aside epub:type='footnote' id="FN271"><p class="f"><a class="notebackref" href="#DT23_6"><span class="notemark">†</span> 23.6</a>
  <span class="ft">Heb. good.</span></p></aside>
 <aside epub:type='footnote' id="FN272"><p class="f"><a class="notebackref" href="#DT23_11"><span class="notemark">†</span> 23.11</a>
- <span class="ft">Heb turncth toward.</span></p></aside>
+ <span class="ft">Heb turneth toward.</span></p></aside>
 <aside epub:type='footnote' id="FN273"><p class="f"><a class="notebackref" href="#DT23_13"><span class="notemark">†</span> 23.13</a>
  <span class="ft">Heb. sittest down.</span></p></aside>
 <aside epub:type='footnote' id="FN274"><p class="f"><a class="notebackref" href="#DT23_14"><span class="notemark">†</span> 23.14</a>
@@ -1814,7 +1814,7 @@
 <aside epub:type='footnote' id="FN292"><p class="f"><a class="notebackref" href="#DT24_19"><span class="notemark">*</span> 24.19</a>
  <span class="ft">Lev. <a href='LEV.xhtml#LV19_9'>19. 9</a>. &amp;c <a href='LEV.xhtml#LV23_22'>23. 22</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN293"><p class="f"><a class="notebackref" href="#DT24_20"><span class="notemark">†</span> 24.20</a>
- <span class="ft">Heb. thou shall not bough it after thee.</span></p></aside>
+ <span class="ft">Heb. thou shalt not bough it after thee.</span></p></aside>
 <aside epub:type='footnote' id="FN294"><p class="f"><a class="notebackref" href="#DT24_21"><span class="notemark">†</span> 24.21</a>
  <span class="ft">Heb. after thee.</span></p></aside>
 <aside epub:type='footnote' id="FN295"><p class="f"><a class="notebackref" href="#DT25_3"><span class="notemark">*</span> 25.3</a>
@@ -1856,7 +1856,7 @@
 <aside epub:type='footnote' id="FN313"><p class="f"><a class="notebackref" href="#DT27_25"><span class="notemark">*</span> 27.25</a>
  <span class="ft">Ezek. <a href='EZK.xhtml#EK22_12'>22. 12</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN314"><p class="f"><a class="notebackref" href="#DT27_26"><span class="notemark">*</span> 27.26</a>
- <span class="ft">Gal. <a href='GAL.xhtml#GL2_10'>2. 10</a>.</span></p></aside>
+ <span class="ft">Gal. <a href='GAL.xhtml#GL3_10'>3. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN315"><p class="f"><a class="notebackref" href="#DT28_1"><span class="notemark">*</span> 28.1</a>
  <span class="ft">Lev. <a href='LEV.xhtml#LV26_3'>26. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN316"><p class="f"><a class="notebackref" href="#DT28_5"><span class="notemark">∥</span> 28.5</a>
@@ -2052,7 +2052,7 @@
 <aside epub:type='footnote' id="FN411"><p class="f"><a class="notebackref" href="#DT33_29"><span class="notemark">∥</span> 33.29</a>
  <span class="ft">Or, shall be subdued.</span></p></aside>
 <aside epub:type='footnote' id="FN412"><p class="f"><a class="notebackref" href="#DT34_1"><span class="notemark">∥</span> 34.1</a>
- <span class="ft">Or, The kill.</span></p></aside>
+ <span class="ft">Or, The hill.</span></p></aside>
 <aside epub:type='footnote' id="FN413"><p class="f"><a class="notebackref" href="#DT34_1"><span class="notemark">*</span> 34.1</a>
  <span class="ft">ch. <a href='DEU.xhtml#DT3_27'>3. 27</a>. 2 Mac. <a href='2MA.xhtml#M22_4'>2. 4</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN414"><p class="f"><a class="notebackref" href="#DT34_4"><span class="notemark">*</span> 34.4</a>
@@ -2060,7 +2060,7 @@
 <aside epub:type='footnote' id="FN415"><p class="f"><a class="notebackref" href="#DT34_7"><span class="notemark">†</span> 34.7</a>
  <span class="ft">Heb. moisture.</span></p></aside>
 <aside epub:type='footnote' id="FN416"><p class="f"><a class="notebackref" href="#DT34_7"><span class="notemark">†</span> 34.7</a>
- <span class="ft">Heb. fied.</span></p></aside>
+ <span class="ft">Heb. fled.</span></p></aside>
 <hr />
 </div>
 </div></body></html>
