--- a/final product/OEBPS/EXO.xhtml
+++ b/final product/OEBPS/EXO.xhtml
@@ -1641,7 +1641,7 @@
 <aside epub:type='footnote' id="FN33"><p class="f"><a class="notebackref" href="#EX6_8"><span class="notemark">†</span> 6.8</a>
  <span class="ft">Heb. lift up my hand.</span></p></aside>
 <aside epub:type='footnote' id="FN34"><p class="f"><a class="notebackref" href="#EX6_9"><span class="notemark">†</span> 6.9</a>
- <span class="ft">Heb. skortness, or straitness.</span></p></aside>
+ <span class="ft">Heb. shortness, or straitness.</span></p></aside>
 <aside epub:type='footnote' id="FN35"><p class="f"><a class="notebackref" href="#EX6_14"><span class="notemark">*</span> 6.14</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN46_9'>46 9</a>. 1 Chr <a href='1CH.xhtml#R15_3'>5. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN36"><p class="f"><a class="notebackref" href="#EX6_15"><span class="notemark">*</span> 6.15</a>
@@ -1677,7 +1677,7 @@
 <aside epub:type='footnote' id="FN51"><p class="f"><a class="notebackref" href="#EX8_21"><span class="notemark">∥</span> 8.21</a>
  <span class="ft">Or, a mixture of noisome beasts, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN52"><p class="f"><a class="notebackref" href="#EX8_23"><span class="notemark">†</span> 8.23</a>
- <span class="ft">Heb. a redemptior.</span></p></aside>
+ <span class="ft">Heb. a redemption.</span></p></aside>
 <aside epub:type='footnote' id="FN53"><p class="f"><a class="notebackref" href="#EX8_23"><span class="notemark">∥</span> 8.23</a>
  <span class="ft">Or, by to morrow.</span></p></aside>
 <aside epub:type='footnote' id="FN54"><p class="f"><a class="notebackref" href="#EX8_24"><span class="notemark">*</span> 8.24</a>
@@ -1773,7 +1773,7 @@
 <aside epub:type='footnote' id="FN99"><p class="f"><a class="notebackref" href="#EX12_47"><span class="notemark">†</span> 12.47</a>
  <span class="ft">Heb. do it.</span></p></aside>
 <aside epub:type='footnote' id="FN100"><p class="f"><a class="notebackref" href="#EX13_2"><span class="notemark">*</span> 13.2</a>
- <span class="ft">ch. <a href='EXO.xhtml#EX22_29'>22. 29</a>. &amp;c <a href='EXO.xhtml#EX84_19'>84. 19</a>. Lev. <a href='LEV.xhtml#LV27_26'>27. 26</a>. Num. <a href='NUM.xhtml#NU3_13'>3. 13</a> &amp;c <a href='NUM.xhtml#NU8_16'>8 16</a>. Luke <a href='LUK.xhtml#LK2_23'>2. 23</a>.</span></p></aside>
+ <span class="ft">ch. <a href='EXO.xhtml#EX22_29'>22. 29</a>. &amp;c <a href='EXO.xhtml#EX34_19'>34. 19</a>. Lev. <a href='LEV.xhtml#LV27_26'>27. 26</a>. Num. <a href='NUM.xhtml#NU3_13'>3. 13</a> &amp;c <a href='NUM.xhtml#NU8_16'>8 16</a>. Luke <a href='LUK.xhtml#LK2_23'>2. 23</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN101"><p class="f"><a class="notebackref" href="#EX13_3"><span class="notemark">†</span> 13.3</a>
  <span class="ft">Heb. servants.</span></p></aside>
 <aside epub:type='footnote' id="FN102"><p class="f"><a class="notebackref" href="#EX13_12"><span class="notemark">*</span> 13.12</a>
@@ -1803,11 +1803,11 @@
 <aside epub:type='footnote' id="FN114"><p class="f"><a class="notebackref" href="#EX14_13"><span class="notemark">∥</span> 14.13</a>
  <span class="ft">Or, for whereas you have seen the Egyptians to day, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN115"><p class="f"><a class="notebackref" href="#EX14_21"><span class="notemark">*</span> 14.21</a>
- <span class="ft">Josh. <a href='JOS.xhtml#JS4_23'>4. 23</a>. l's. <a href='JOS.xhtml#JS114_3'>114. 3</a></span></p></aside>
+ <span class="ft">Josh. <a href='JOS.xhtml#JS4_23'>4. 23</a>. Psalm <a href='PSA.xhtml#PS114_3'>114. 3</a></span></p></aside>
 <aside epub:type='footnote' id="FN116"><p class="f"><a class="notebackref" href="#EX14_22"><span class="notemark">*</span> 14.22</a>
  <span class="ft">Ps. <a href='PSA.xhtml#PS78_13'>78. 13</a> 1 Cor. <a href='1CO.xhtml#C110_1'>10. 1</a>. Heb. <a href='HEB.xhtml#HB11_29'>11 29</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN117"><p class="f"><a class="notebackref" href="#EX14_25"><span class="notemark">∥</span> 14.25</a>
- <span class="ft">Or, and made them to qo heavily.</span></p></aside>
+ <span class="ft">Or, and made them to go heavily.</span></p></aside>
 <aside epub:type='footnote' id="FN118"><p class="f"><a class="notebackref" href="#EX14_27"><span class="notemark">†</span> 14.27</a>
  <span class="ft">Heb. shook off.</span></p></aside>
 <aside epub:type='footnote' id="FN119"><p class="f"><a class="notebackref" href="#EX14_28"><span class="notemark">*</span> 14.28</a>
@@ -1985,7 +1985,7 @@
 <aside epub:type='footnote' id="FN205"><p class="f"><a class="notebackref" href="#EX22_22"><span class="notemark">*</span> 22.22</a>
  <span class="ft">Zech. <a href='ZEC.xhtml#ZC7_10'>7. 10</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN206"><p class="f"><a class="notebackref" href="#EX22_25"><span class="notemark">*</span> 22.25</a>
- <span class="ft">Lev. <a href='LEV.xhtml#LV25_37'>25. 37</a>. Deut. <a href='DEU.xhtml#DT23_19'>23. 19</a>. Pa. <a href='DEU.xhtml#DT15_5'>15. 5</a>.</span></p></aside>
+ <span class="ft">Lev. <a href='LEV.xhtml#LV25_37'>25. 37</a>. Deut. <a href='DEU.xhtml#DT23_19'>23. 19</a>. Psal. <a href='PSA.xhtml#PS15_5'>15. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN207"><p class="f"><a class="notebackref" href="#EX22_28"><span class="notemark">*</span> 22.28</a>
  <span class="ft">Acts <a href='ACT.xhtml#AC23_5'>23. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN208"><p class="f"><a class="notebackref" href="#EX22_28"><span class="notemark">∥</span> 22.28</a>
@@ -2115,7 +2115,7 @@
 <aside epub:type='footnote' id="FN270"><p class="f"><a class="notebackref" href="#EX28_8"><span class="notemark">∥</span> 28.8</a>
  <span class="ft">Or, embroidered.</span></p></aside>
 <aside epub:type='footnote' id="FN271"><p class="f"><a class="notebackref" href="#EX28_11"><span class="notemark">*</span> 28.11</a>
- <span class="ft">Wisd. <a href='WIS.xhtml#WS13_24'>13. 24</a>.</span></p></aside>
+ <span class="ft">Wisd. <a href='WIS.xhtml#WS18_24'>18. 24</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN272"><p class="f"><a class="notebackref" href="#EX28_17"><span class="notemark">†</span> 28.17</a>
  <span class="ft">Heb. fill in it fillings of stone.</span></p></aside>
 <aside epub:type='footnote' id="FN273"><p class="f"><a class="notebackref" href="#EX28_17"><span class="notemark">∥</span> 28.17</a>
@@ -2129,7 +2129,7 @@
 <aside epub:type='footnote' id="FN277"><p class="f"><a class="notebackref" href="#EX28_41"><span class="notemark">†</span> 28.41</a>
  <span class="ft">Heb. fill their hand.</span></p></aside>
 <aside epub:type='footnote' id="FN278"><p class="f"><a class="notebackref" href="#EX28_42"><span class="notemark">†</span> 28.42</a>
- <span class="ft">Heb. flesh of then nakedness.</span></p></aside>
+ <span class="ft">Heb. flesh of their nakedness.</span></p></aside>
 <aside epub:type='footnote' id="FN279"><p class="f"><a class="notebackref" href="#EX28_42"><span class="notemark">†</span> 28.42</a>
  <span class="ft">Heb. be.</span></p></aside>
 <aside epub:type='footnote' id="FN280"><p class="f"><a class="notebackref" href="#EX29_1"><span class="notemark">*</span> 29.1</a>
@@ -2385,7 +2385,7 @@
 <aside epub:type='footnote' id="FN405"><p class="f"><a class="notebackref" href="#EX40_29"><span class="notemark">*</span> 40.29</a>
  <span class="ft">ch. <a href='EXO.xhtml#EX30_9'>30. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN406"><p class="f"><a class="notebackref" href="#EX40_34"><span class="notemark">*</span> 40.34</a>
- <span class="ft">Num. <a href='NUM.xhtml#NU9_15'>9 15</a>. 1 Kings &amp;c <a href='1KI.xhtml#K110_0'>10.</a></span></p></aside>
+ <span class="ft">Num. <a href='NUM.xhtml#NU9_15'>9 15</a>. 1 Kings <a href='1KI.xhtml#K18_10'>8. 10.</a></span></p></aside>
 <aside epub:type='footnote' id="FN407"><p class="f"><a class="notebackref" href="#EX40_36"><span class="notemark">†</span> 40.36</a>
  <span class="ft">Heb. journeyed.</span></p></aside>
 <hr />
