--- a/final product/OEBPS/GEN.xhtml
+++ b/final product/OEBPS/GEN.xhtml
@@ -2327,7 +2327,7 @@
 <aside epub:type='footnote' id="FN184"><p class="f"><a class="notebackref" href="#GN17_12"><span class="notemark">*</span> 17.12</a>
  <span class="ft">Lev. <a href='LEV.xhtml#LV12_8'>12. 8</a>. Luke <a href='LUK.xhtml#LK2_21'>2. 21</a>. John <a href='JHN.xhtml#JN7_22'>7. 22</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN185"><p class="f"><a class="notebackref" href="#GN17_16"><span class="notemark">†</span> 17.16</a>
- <span class="ft">Heb. she shall became nations.</span></p></aside>
+ <span class="ft">Heb. she shall become nations.</span></p></aside>
 <aside epub:type='footnote' id="FN186"><p class="f"><a class="notebackref" href="#GN17_19"><span class="notemark">*</span> 17.19</a>
  <span class="ft">ch. <a href='GEN.xhtml#GN18_10'>18. 10</a> &amp;c <a href='GEN.xhtml#GN21_2'>21. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN187"><p class="f"><a class="notebackref" href="#GN17_20"><span class="notemark">*</span> 17.20</a>
@@ -2383,7 +2383,7 @@
 <aside epub:type='footnote' id="FN212"><p class="f"><a class="notebackref" href="#GN21_10"><span class="notemark">*</span> 21.10</a>
  <span class="ft">Gal. <a href='GAL.xhtml#GL4_30'>4. 30</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN213"><p class="f"><a class="notebackref" href="#GN21_23"><span class="notemark">†</span> 21.23</a>
- <span class="ft">Heb. if thou shalt he unto me.</span></p></aside>
+ <span class="ft">Heb. if thou shalt lie unto me.</span></p></aside>
 <aside epub:type='footnote' id="FN214"><p class="f"><a class="notebackref" href="#GN21_31"><span class="notemark">∥</span> 21.31</a>
  <span class="ft">That is. The well of the oath.</span></p></aside>
 <aside epub:type='footnote' id="FN215"><p class="f"><a class="notebackref" href="#GN21_33"><span class="notemark">∥</span> 21.33</a>
@@ -2489,7 +2489,7 @@
 <aside epub:type='footnote' id="FN265"><p class="f"><a class="notebackref" href="#GN26_28"><span class="notemark">†</span> 26.28</a>
  <span class="ft">Heb. Seeing we saw.</span></p></aside>
 <aside epub:type='footnote' id="FN266"><p class="f"><a class="notebackref" href="#GN26_29"><span class="notemark">†</span> 26.29</a>
- <span class="ft">Heb. If thou shall, &amp;c.</span></p></aside>
+ <span class="ft">Heb. If thou shalt, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN267"><p class="f"><a class="notebackref" href="#GN26_33"><span class="notemark">∥</span> 26.33</a>
  <span class="ft">That is, An oath.</span></p></aside>
 <aside epub:type='footnote' id="FN268"><p class="f"><a class="notebackref" href="#GN26_33"><span class="notemark">∥</span> 26.33</a>
@@ -2591,7 +2591,7 @@
 <aside epub:type='footnote' id="FN316"><p class="f"><a class="notebackref" href="#GN30_20"><span class="notemark">∥</span> 30.20</a>
  <span class="ft">That is, Dwelling.</span></p></aside>
 <aside epub:type='footnote' id="FN317"><p class="f"><a class="notebackref" href="#GN30_20"><span class="notemark">*</span> 30.20</a>
- <span class="ft">Matt. <a href='MAT.xhtml#MT4_13'>4. 13</a>, Zabulan.</span></p></aside>
+ <span class="ft">Matt. <a href='MAT.xhtml#MT4_13'>4. 13</a>, Zabulon.</span></p></aside>
 <aside epub:type='footnote' id="FN318"><p class="f"><a class="notebackref" href="#GN30_21"><span class="notemark">∥</span> 30.21</a>
  <span class="ft">That is, Judgment.</span></p></aside>
 <aside epub:type='footnote' id="FN319"><p class="f"><a class="notebackref" href="#GN30_24"><span class="notemark">∥</span> 30.24</a>
@@ -2745,7 +2745,7 @@
 <aside epub:type='footnote' id="FN393"><p class="f"><a class="notebackref" href="#GN37_36"><span class="notemark">∥</span> 37.36</a>
  <span class="ft">Or, chief marshal.</span></p></aside>
 <aside epub:type='footnote' id="FN394"><p class="f"><a class="notebackref" href="#GN38_2"><span class="notemark">*</span> 38.2</a>
- <span class="ft">1 Chr. <a href='1CH.xhtml#R12_8'>2. 8</a>.</span></p></aside>
+ <span class="ft">1 Chr. <a href='1CH.xhtml#R12_3'>2. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN395"><p class="f"><a class="notebackref" href="#GN38_4"><span class="notemark">*</span> 38.4</a>
  <span class="ft">Num. <a href='NUM.xhtml#NU26_19'>26. 19</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN396"><p class="f"><a class="notebackref" href="#GN38_7"><span class="notemark">*</span> 38.7</a>
