--- a/final product/OEBPS/NUM.xhtml
+++ b/final product/OEBPS/NUM.xhtml
@@ -1092,8 +1092,8 @@
 <span class="verse" id="NU24_18">18&#160;</span> And Edom shall be a possession, Seir also shall be a possession for his enemies; and Israel shall do valiantly.
 <span class="verse" id="NU24_19">19&#160;</span> Out of Jacob shall come he that shall have dominion, and shall destroy him that remaineth of the city. </div>
 <div class='p'>
-<span class="verse" id="NU24_20">20&#160;</span>¶ <a href='#FN234' epub:type='noteref' class='noteref'>∥</a>And when he looked on Amalek, he took up his parable, and said, Amalek <span class='add'>was</span> the first of the nations; but his latter end <span class='add'>shall be</span> that he perish for ever.
-<span class="verse" id="NU24_21">21&#160;</span><a href='#FN235' epub:type='noteref' class='noteref'>∥</a> And he looked on the Kenites, and took up his parable, and said, Strong is thy dwellingplace, and thou puttest thy nest in a rock.
+<span class="verse" id="NU24_20">20&#160;</span>¶ <a href='#FN234' epub:type='noteref' class='noteref'>∥</a>And when he looked on Amalek, he took up his parable, and said, Amalek <span class='add'>was</span> the first of the nations; but his latter end <a href='#FN235' epub:type='noteref' class='noteref'>∥</a><span class='add'>shall be</span> that he perish for ever.
+<span class="verse" id="NU24_21">21&#160;</span> And he looked on the Kenites, and took up his parable, and said, Strong is thy dwellingplace, and thou puttest thy nest in a rock.
 <span class="verse" id="NU24_22">22&#160;</span> Nevertheless <a href='#FN236' epub:type='noteref' class='noteref'>†</a>the Kenite shall be wasted, <a href='#FN237' epub:type='noteref' class='noteref'>∥</a>until Asshur shall carry thee away captive.
 <span class="verse" id="NU24_23">23&#160;</span> And he took up his parable, and said, Alas, who shall live when God doeth this!
 <span class="verse" id="NU24_24">24&#160;</span> And ships <span class='add'>shall come</span> from the coast of Chittim, and shall afflict Asshur, and shall afflict Eber, and he also shall perish for ever.
@@ -1671,7 +1671,7 @@
 <aside epub:type='footnote' id="FN37"><p class="f"><a class="notebackref" href="#NU5_19"><span class="notemark">†</span> 5.19</a>
  <span class="ft">Heb. under thy husband.</span></p></aside>
 <aside epub:type='footnote' id="FN38"><p class="f"><a class="notebackref" href="#NU5_20"><span class="notemark">‡</span> 5.20</a>
- <span class="ft">[1611 hath ben]</span></p></aside>
+ <span class="ft">[1611 hath been]</span></p></aside>
 <aside epub:type='footnote' id="FN39"><p class="f"><a class="notebackref" href="#NU5_21"><span class="notemark">†</span> 5.21</a>
  <span class="ft">Heb. fall.</span></p></aside>
 <aside epub:type='footnote' id="FN40"><p class="f"><a class="notebackref" href="#NU6_2"><span class="notemark">∥</span> 6.2</a>
@@ -1889,7 +1889,7 @@
 <aside epub:type='footnote' id="FN146"><p class="f"><a class="notebackref" href="#NU15_38"><span class="notemark">*</span> 15.38</a>
  <span class="ft">Deut. <a href='DEU.xhtml#DT22_12'>22. 12</a>. Matt. <a href='MAT.xhtml#MT23_5'>23. 5</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN147"><p class="f"><a class="notebackref" href="#NU16_1"><span class="notemark">*</span> 16.1</a>
- <span class="ft">ch. <a href='NUM.xhtml#NU27_3'>27. 3</a>. Ecclus. <a href='SIR.xhtml#SR45_21'>45 21</a>. Judo <a href='SIR.xhtml#SR11_0'>11.</a></span></p></aside>
+ <span class="ft">ch. <a href='NUM.xhtml#NU27_3'>27. 3</a>. Ecclus. <a href='SIR.xhtml#SR45_21'>45 21</a>. Jude <a href='JUD.xhtml#JD1_11'>11.</a></span></p></aside>
 <aside epub:type='footnote' id="FN148"><p class="f"><a class="notebackref" href="#NU16_2"><span class="notemark">*</span> 16.2</a>
  <span class="ft">ch. <a href='NUM.xhtml#NU26_9'>26. 9</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN149"><p class="f"><a class="notebackref" href="#NU16_3"><span class="notemark">†</span> 16.3</a>
@@ -1951,7 +1951,7 @@
 <aside epub:type='footnote' id="FN177"><p class="f"><a class="notebackref" href="#NU20_5"><span class="notemark">‡</span> 20.5</a>
  <span class="ft">[1611 omits of]</span></p></aside>
 <aside epub:type='footnote' id="FN178"><p class="f"><a class="notebackref" href="#NU20_13"><span class="notemark">*</span> 20.13</a>
- <span class="ft">Ps. <a href='PSA.xhtml#PS106_82'>106. 82</a>, &amp;c.</span></p></aside>
+ <span class="ft">Ps. <a href='PSA.xhtml#PS106_32'>106. 32</a>, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN179"><p class="f"><a class="notebackref" href="#NU20_13"><span class="notemark">∥</span> 20.13</a>
  <span class="ft">That is, Strife.</span></p></aside>
 <aside epub:type='footnote' id="FN180"><p class="f"><a class="notebackref" href="#NU20_14"><span class="notemark">†</span> 20.14</a>
@@ -2061,10 +2061,10 @@
 <aside epub:type='footnote' id="FN232"><p class="f"><a class="notebackref" href="#NU24_9"><span class="notemark">*</span> 24.9</a>
  <span class="ft">Gen. <a href='GEN.xhtml#GN49_9'>49 9</a></span></p></aside>
 <aside epub:type='footnote' id="FN233"><p class="f"><a class="notebackref" href="#NU24_17"><span class="notemark">∥</span> 24.17</a>
- <span class="ft">Or, smile through the princes of Moab.</span></p></aside>
+ <span class="ft">Or, smite through the princes of Moab.</span></p></aside>
 <aside epub:type='footnote' id="FN234"><p class="f"><a class="notebackref" href="#NU24_20"><span class="notemark">∥</span> 24.20</a>
- <span class="ft">Israel, <a href='ISA.xhtml#IS_17'>Ex. 17</a>. <a href='ISA.xhtml#IS8_0'>8.</a></span></p></aside>
-<aside epub:type='footnote' id="FN235"><p class="f"><a class="notebackref" href="#NU24_21"><span class="notemark">∥</span> 24.21</a>
+ <span class="ft">Israel, <a href='EXO.xhtml#EX17_1'>Ex. 17</a></span></p></aside>
+<aside epub:type='footnote' id="FN235"><p class="f"><a class="notebackref" href="#NU24_20"><span class="notemark">∥</span> 24.20</a>
  <span class="ft">Or, shall be even to destruction.</span></p></aside>
 <aside epub:type='footnote' id="FN236"><p class="f"><a class="notebackref" href="#NU24_22"><span class="notemark">†</span> 24.22</a>
  <span class="ft">Heb. Kain.</span></p></aside>
@@ -2091,7 +2091,7 @@
 <aside epub:type='footnote' id="FN247"><p class="f"><a class="notebackref" href="#NU26_4"><span class="notemark">*</span> 26.4</a>
  <span class="ft">ch. <a href='NUM.xhtml#NU1_1'>1. 1</a></span></p></aside>
 <aside epub:type='footnote' id="FN248"><p class="f"><a class="notebackref" href="#NU26_5"><span class="notemark">*</span> 26.5</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN46_8'>46 8</a> Ex b <a href='EXO.xhtml#EX14_0'>14.</a> 1 Chr. <a href='1CH.xhtml#R15_1'>5. 1</a>.</span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN46_8'>46 8</a> Exod. <a href='EXO.xhtml#EX6_14'>6. 14.</a> 1 Chr. <a href='1CH.xhtml#R15_1'>5. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN249"><p class="f"><a class="notebackref" href="#NU26_9"><span class="notemark">*</span> 26.9</a>
  <span class="ft">ch <a href='NUM.xhtml#NU16_2'>16. 2</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN250"><p class="f"><a class="notebackref" href="#NU26_19"><span class="notemark">*</span> 26.19</a>
@@ -2117,7 +2117,7 @@
 <aside epub:type='footnote' id="FN260"><p class="f"><a class="notebackref" href="#NU26_65"><span class="notemark">*</span> 26.65</a>
  <span class="ft">ch. <a href='NUM.xhtml#NU14_28'>14. 28</a>. 1 Cor. 10. <a href='1CO.xhtml#C110_5'>5</a>, <a href='1CO.xhtml#C110_6'>6</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN261"><p class="f"><a class="notebackref" href="#NU27_1"><span class="notemark">*</span> 27.1</a>
- <span class="ft">ch. <a href='NUM.xhtml#NU26_83'>26. 83</a>. Josh. <a href='JOS.xhtml#JS17_3'>17. 3</a>.</span></p></aside>
+ <span class="ft">ch. <a href='NUM.xhtml#NU26_33'>26. 33</a>. Josh. <a href='JOS.xhtml#JS17_3'>17. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN262"><p class="f"><a class="notebackref" href="#NU27_3"><span class="notemark">*</span> 27.3</a>
  <span class="ft">ch. <a href='NUM.xhtml#NU14_35'>14. 35</a>. &amp;c 26. <a href='NUM.xhtml#NU26_64'>64</a>, <a href='NUM.xhtml#NU26_65'>65</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN263"><p class="f"><a class="notebackref" href="#NU27_4"><span class="notemark">†</span> 27.4</a>
@@ -2131,7 +2131,7 @@
 <aside epub:type='footnote' id="FN267"><p class="f"><a class="notebackref" href="#NU27_14"><span class="notemark">*</span> 27.14</a>
  <span class="ft">Ex. <a href='EXO.xhtml#EX17_7'>17. 7</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN268"><p class="f"><a class="notebackref" href="#NU27_21"><span class="notemark">*</span> 27.21</a>
- <span class="ft">Ex. <a href='EXO.xhtml#EX23_30'>23. 30</a>.</span></p></aside>
+ <span class="ft">Ex. <a href='EXO.xhtml#EX28_30'>28. 30.</a></span></p></aside>
 <aside epub:type='footnote' id="FN269"><p class="f"><a class="notebackref" href="#NU28_2"><span class="notemark">†</span> 28.2</a>
  <span class="ft">Heb. a savour of my rest.</span></p></aside>
 <aside epub:type='footnote' id="FN270"><p class="f"><a class="notebackref" href="#NU28_3"><span class="notemark">*</span> 28.3</a>
@@ -2201,7 +2201,7 @@
 <aside epub:type='footnote' id="FN302"><p class="f"><a class="notebackref" href="#NU32_11"><span class="notemark">*</span> 32.11</a>
  <span class="ft">ch. 14. <a href='NUM.xhtml#NU14_28'>28</a>, <a href='NUM.xhtml#NU14_29'>29</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN303"><p class="f"><a class="notebackref" href="#NU32_11"><span class="notemark">†</span> 32.11</a>
- <span class="ft">Heb. ful filled after me.</span></p></aside>
+ <span class="ft">Heb. fulfilled after me.</span></p></aside>
 <aside epub:type='footnote' id="FN304"><p class="f"><a class="notebackref" href="#NU32_20"><span class="notemark">*</span> 32.20</a>
  <span class="ft">Josh. <a href='JOS.xhtml#JS1_13'>1. 13</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN305"><p class="f"><a class="notebackref" href="#NU32_27"><span class="notemark">*</span> 32.27</a>
@@ -2261,7 +2261,7 @@
 <aside epub:type='footnote' id="FN332"><p class="f"><a class="notebackref" href="#NU33_54"><span class="notemark">†</span> 33.54</a>
  <span class="ft">Heb. diminish his inheritance.</span></p></aside>
 <aside epub:type='footnote' id="FN333"><p class="f"><a class="notebackref" href="#NU33_55"><span class="notemark">*</span> 33.55</a>
- <span class="ft">Josh. <a href='JOS.xhtml#JS28_13'>28. 13</a>. Judg. <a href='JDG.xhtml#JG2_3'>2. 3</a>.</span></p></aside>
+ <span class="ft">Josh. <a href='JOS.xhtml#JS23_13'>23. 13</a>. Judg. <a href='JDG.xhtml#JG2_3'>2. 3</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN334"><p class="f"><a class="notebackref" href="#NU34_3"><span class="notemark">*</span> 34.3</a>
  <span class="ft">Josh. <a href='JOS.xhtml#JS15_1'>15. 1</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN335"><p class="f"><a class="notebackref" href="#NU34_11"><span class="notemark">†</span> 34.11</a>
