--- a/final product/OEBPS/changes.xhtml
+++ b/final product/OEBPS/changes.xhtml
@@ -14,7 +14,7 @@
 <h2>Editor’s Changes</h2>
 <br/>
 <p>
-The basis for the text is the standardized text of the King James Version or Authorized Version of the Holy Bible, using the standardized text of 1769. However, the extent transcriptions thereof on the Internet differ in a few places from one another, if not possessing outright and obvious errors. Here is the list of all changes I have manually made in an effort to bring it into accordance with the 1611 text (and if through an overworking of pride I have erred, I would welcome correction):
+The basis for the text is the standardized text of the King James Version or Authorized Version of the Holy Bible, using the standardized text of 1769. However, the extant transcriptions thereof on the Internet differ in a few places from one another, if not possessing outright and obvious errors. Here is the list of all changes I have manually made in an effort to bring it into accordance with the 1611 text (and if through an overworking of pride I have erred, I would welcome correction):
 <br/>
 <br/>
 <a href='1ES.xhtml#E19_49'>1 Esdras 9:49</a>: changed errant period to comma, i.e., change "the chief priest. and reader" to ""the chief priest, and reader"
