proofread up to and including Ruth

--- a/final product/OEBPS/JDG.xhtml
+++ b/final product/OEBPS/JDG.xhtml
@@ -997,7 +997,7 @@
 <aside epub:type='footnote' id="FN94"><p class="f"><a class="notebackref" href="#JG7_11"><span class="notemark">∥</span> 7.11</a>
  <span class="ft">Or, ranks by five.</span></p></aside>
 <aside epub:type='footnote' id="FN95"><p class="f"><a class="notebackref" href="#JG7_12"><span class="notemark">*</span> 7.12</a>
- <span class="ft">ch. <a href='JDG.xhtml#JG6_83'>6. 83</a>.</span></p></aside>
+ <span class="ft">ch. <a href='JDG.xhtml#JG6_33'>6. 33</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN96"><p class="f"><a class="notebackref" href="#JG7_15"><span class="notemark">†</span> 7.15</a>
  <span class="ft">Heb. the breaking thereof.</span></p></aside>
 <aside epub:type='footnote' id="FN97"><p class="f"><a class="notebackref" href="#JG7_16"><span class="notemark">†</span> 7.16</a>
@@ -1291,7 +1291,7 @@
 <aside epub:type='footnote' id="FN241"><p class="f"><a class="notebackref" href="#JG20_5"><span class="notemark">†</span> 20.5</a>
  <span class="ft">Heb. humbled.</span></p></aside>
 <aside epub:type='footnote' id="FN242"><p class="f"><a class="notebackref" href="#JG20_11"><span class="notemark">†</span> 20.11</a>
- <span class="ft">Heb. felloies.</span></p></aside>
+ <span class="ft">Heb. fellowes.</span></p></aside>
 <aside epub:type='footnote' id="FN243"><p class="f"><a class="notebackref" href="#JG20_16"><span class="notemark">*</span> 20.16</a>
  <span class="ft">ch. <a href='JDG.xhtml#JG3_15'>3 15</a>.</span></p></aside>
 <aside epub:type='footnote' id="FN244"><p class="f"><a class="notebackref" href="#JG20_31"><span class="notemark">†</span> 20.31</a>
@@ -1311,7 +1311,7 @@
 <aside epub:type='footnote' id="FN251"><p class="f"><a class="notebackref" href="#JG20_40"><span class="notemark">†</span> 20.40</a>
  <span class="ft">Heb. the whole consumption.</span></p></aside>
 <aside epub:type='footnote' id="FN252"><p class="f"><a class="notebackref" href="#JG20_41"><span class="notemark">†</span> 20.41</a>
- <span class="ft">Heb. low lad them.</span></p></aside>
+ <span class="ft">Heb. touched them.</span></p></aside>
 <aside epub:type='footnote' id="FN253"><p class="f"><a class="notebackref" href="#JG20_43"><span class="notemark">∥</span> 20.43</a>
  <span class="ft">Or, from Menuchah, &amp;c.</span></p></aside>
 <aside epub:type='footnote' id="FN254"><p class="f"><a class="notebackref" href="#JG20_43"><span class="notemark">†</span> 20.43</a>
