--- a/final product/OEBPS/JOS.xhtml
+++ b/final product/OEBPS/JOS.xhtml
@@ -1253,7 +1253,7 @@
 <aside epub:type='footnote' id="FN202"><p class="f"><a class="notebackref" href="#JS22_24"><span class="notemark">†</span> 22.24</a>
  <span class="ft">Heb To morrow.</span></p></aside>
 <aside epub:type='footnote' id="FN203"><p class="f"><a class="notebackref" href="#JS22_27"><span class="notemark">*</span> 22.27</a>
- <span class="ft">Gen. <a href='GEN.xhtml#GN31_48'>31. 48</a>. ver. <a href='JOS.xhtml#JS22_34'>34</a> 24. 27.</span></p></aside>
+ <span class="ft">Gen. <a href='GEN.xhtml#GN31_48'>31. 48</a>. ver. <a href='JOS.xhtml#JS22_34'>34</a> chap. <a href='JOS.xhtml#JS24_27'>24. 27.</a></span></p></aside>
 <aside epub:type='footnote' id="FN204"><p class="f"><a class="notebackref" href="#JS22_30"><span class="notemark">†</span> 22.30</a>
  <span class="ft">Heb. it was good in their eyes.</span></p></aside>
 <aside epub:type='footnote' id="FN205"><p class="f"><a class="notebackref" href="#JS22_31"><span class="notemark">†</span> 22.31</a>
